wrap issue.body_html in a class that set img widths to 100% of container

--- a/src/less/layout.css
+++ b/src/less/layout.css
@@ -86,6 +86,10 @@ a:hover {
   margin-bottom: 15px;
 }
 
+.image_body_html img {
+  width: 100%;
+}
+
 
 
 .img-responsive { width: 100%;}
